Closed Bug 1493835 Opened 7 years ago Closed 7 years ago

Don't let GPU process to notify VR process shutdown when no GPUChild connection

Categories

(Core :: WebVR, defect)

defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla64
Tracking Status
firefox63 --- fixed
firefox64 --- fixed

People

(Reporter: daoshengmu, Assigned: daoshengmu)

References

Details

Attachments

(1 file)

Bug 1485388 is not fixed all the issues. We should call GPUChild IPC function after making sure it is connected.
See Also: → 1485388
Assignee: nobody → dmu
Summary: Don't let GPU process to notify VR process shutdwon when no GPUChild connection → Don't let GPU process to notify VR process shutdown when no GPUChild connection
Comment on attachment 9011897 [details] Bug 1493835 - Don't notify VR process shutdown when no GPUChild connection. :kip (Kearwood Gilbert) has approved the revision.
Attachment #9011897 - Flags: review+
Pushed by dmu@mozilla.com: https://hg.mozilla.org/integration/autoland/rev/b8a5673c51ea Don't notify VR process shutdown when no GPUChild connection. r=kip
Status: NEW → RESOLVED
Closed: 7 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla64
Blocks: 1485388
See Also: 1485388
Comment on attachment 9011897 [details] Bug 1493835 - Don't notify VR process shutdown when no GPUChild connection. [Beta/Release Uplift Approval Request] Feature/Bug causing the regression: Bug 1485388 User impact if declined: The one piece of the fixed patch has been landed to FF63. This patch is also needed to uplift to FF63 to solve the issue completely. Otherwise, the crashes from Bug 1485388 will still happen. Is this code covered by automated tests?: Yes Has the fix been verified in Nightly?: Yes Needs manual test from QE?: No If yes, steps to reproduce: List of other uplifts needed: None Risk to taking this patch: Low Why is the change risky/not risky? (and alternatives if risky): It just a conditional check to avoid messages be sent without the IPC channel. String changes made/needed:
Attachment #9011897 - Flags: approval-mozilla-beta?
Comment on attachment 9011897 [details] Bug 1493835 - Don't notify VR process shutdown when no GPUChild connection. Crash fix, uplift approved for 63 beta 13, thanks.
Attachment #9011897 - Flags: approval-mozilla-beta? → approval-mozilla-beta+
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: