Bug 1493835 - Don't notify VR process shutdown when no GPUChild connection. r=kip a=pascalc

MozReview-Commit-ID: ZXs6SldKcw

Differential Revision: https://phabricator.services.mozilla.com/D6825