gfx/vr/ipc/VRGPUChild.h
@@ -26,8 +26,6 @@ protected:
   explicit VRGPUChild() {}
   ~VRGPUChild() {}
 
-  void Destroy();
-
 private:
   DISALLOW_COPY_AND_ASSIGN(VRGPUChild);
 };
